fixed alignment issues and data bugs on progress-screen

--- a/src/components/progress-screen.css
+++ b/src/components/progress-screen.css
@@ -10,15 +10,22 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 20px;
 }
 ul {
+  text-align: center;
   list-style-type: none;
+  list-style: none;
 }
-ul.li {
+ul li {
   display: block;
 }
 
 .learned-signs {
   max-height: 50px;
   max-width: 50px;
+}
+.progress-data {
+  padding-left: 0;
+  margin-left: 0;
 }
